[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "learning-agent-memory"
version = "0.1.0"
description = "Persistent memory layer that learns and improves agent performance through experience consolidation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Phoenix Assistant" }]
keywords = ["agent", "memory", "learning", "mcp", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
learning-agent-memory-server = "learning_agent_memory.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/learning_agent_memory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
